(ocamllex lexer)

(menhir
 (modules parser)
 (explain true)
 (flags --table --unparsing))

(library
 (name bfParser)
 (modules ast lexer parser parser_driver unparser)
 (libraries core menhirLib menhirCST pprint coqExtract)
 (preprocess (staged_pps ppx_import ppx_deriving.show))
 (flags :standard -w -27))